--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,15 +10,42 @@ find_package(ament_cmake REQUIRED)
 # uncomment the following section in order to fill in
 # further dependencies manually.
 # find_package(<dependency> REQUIRED)
+find_package(rclcpp REQUIRED)
+find_package(sensor_msgs REQUIRED)
+find_package(geometry_msgs REQUIRED)
+find_package(tf2_ros REQUIRED)
+find_package(tf2 REQUIRED)
+find_package(tf2_geometry_msgs REQUIRED)
 
-add_executable(iekf_localizer_node src/iekf_localizer_node.cpp)
+add_executable(iekf_localizer_node
+  src/iekf_localizer_node.cpp
+  src/iekf_localizer.cpp)
+
 target_include_directories(iekf_localizer_node PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
   $<INSTALL_INTERFACE:include>)
+
+ament_target_dependencies(iekf_localizer_node PUBLIC
+  rclcpp
+  sensor_msgs
+  geometry_msgs
+  tf2_ros
+  tf2
+  tf2_geometry_msgs)
+
 target_compile_features(iekf_localizer_node PUBLIC c_std_99 cxx_std_17)  # Require C99 and C++17
 
 install(TARGETS iekf_localizer_node
   DESTINATION lib/${PROJECT_NAME})
+
+install(DIRECTORY launch
+  DESTINATION share/${PROJECT_NAME})
+
+install(DIRECTORY params
+  DESTINATION share/${PROJECT_NAME})
+
+install(DIRECTORY rviz
+  DESTINATION share/${PROJECT_NAME})
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
