--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,9 @@ find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(sensor_msgs REQUIRED)
 find_package(geometry_msgs REQUIRED)
+find_package(tf2_ros REQUIRED)
+find_package(tf2_eigen REQUIRED)
+find_package(tf2_geometry_msgs REQUIRED)
 find_package(Eigen3 REQUIRED)
 find_package(manif REQUIRED)
 
@@ -29,7 +32,10 @@ target_include_directories(iekf_localizer_node PUBLIC
 ament_target_dependencies(iekf_localizer_node PUBLIC
   rclcpp
   sensor_msgs
-  geometry_msgs)
+  geometry_msgs
+  tf2_ros
+  tf2_eigen
+  tf2_geometry_msgs)
 
 target_link_libraries(iekf_localizer_node PUBLIC
   Eigen3::Eigen
