--- a/package.xml
+++ b/package.xml
@@ -4,10 +4,16 @@
   <name>iekf_localizer</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
-  <maintainer email="yi-chen@todo.todo">yi-chen</maintainer>
+  <maintainer email="yi-chen@todo.todo">chris7462</maintainer>
   <license>Apache-2.0</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
+  <depend>rclcpp</depend>
+  <depend>sensor_msgs</depend>
+  <depend>geometry_msgs</depend>
+  <depend>tf2_ros</depend>
+  <depend>tf2_eigen</depend>
+  <depend>tf2_geometry_msgs</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
