Change to SE_2_3 model

--- a/params/iekf_localizer.yaml
+++ b/params/iekf_localizer.yaml
@@ -6,12 +6,22 @@ iekf_localizer_node:
     init:
       xyz: [0.0, 0.0, 0.0]
       rpy: [0.0, 0.0, 0.0]
-      P: [1.0, 0.0, 0.0, 0.0, 0.0, 0.0,
-          0.0, 1.0, 0.0, 0.0, 0.0, 0.0,
-          0.0, 0.0, 1.0, 0.0, 0.0, 0.0,
-          0.0, 0.0, 0.0, 1.0, 0.0, 0.0,
-          0.0, 0.0, 0.0, 0.0, 1.0, 0.0,
-          0.0, 0.0, 0.0, 0.0, 0.0, 1.0]
+      vxyz: [5.5, 0.0, 0.0]
+      P: [0.01, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0,
+          0.0, 0.01, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0,
+          0.0, 0.0, 0.01, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0,
+          0.0, 0.0, 0.0, 0.01, 0.0, 0.0, 0.0, 0.0, 0.0,
+          0.0, 0.0, 0.0, 0.0, 0.01, 0.0, 0.0, 0.0, 0.0,
+          0.0, 0.0, 0.0, 0.0, 0.0, 0.01, 0.0, 0.0, 0.0,
+          0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.01, 0.0, 0.0,
+          0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.01, 0.0,
+          0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.01]
     # control noise covariance
-    # Q = diagonal(sigma_x^2, sigma_y^2, sigma_z^2, sigma_roll^2, sigma_pitch^2, sigma_yaw^2)
-    u_sigmas: [0.1, 0.1, 0.1, 0.1, 0.1, 0.1] # standard deviation
+    # u = [u_p, u_omega, u_nu].T
+    # u_p = R.T v dt + 0.5 dt^2 (alpha + R.T g)
+    # u_omega = omega dt
+    # u_nu = (alpha + R.T g) dt
+    # Q = diagonal(0, 0, 0, sigma_omegax^2, sigma_omegay^2, sigma_omegaz^2, sigma_accx^2, sigma_accy^2, sigma_accz^2)
+    u_sigmas: [0.0, 0.0, 0.0, 0.01, 0.01, 0.01, 0.01, 0.01, 0.01] # standard deviation
+    # gravity. The default is (0.0, 0.0, -9.80665) for (x, y, z)
+    g: [0.0, 0.0, -9.80665]
